# bisector

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
bisector/: __init__.py  __main__.py  bisector.py
test/: test_bisector.py
