[project]
name = "bisector"
version = "0.0.1"
description = "Bisecting Utilities"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}

keywords = ["bisecting", "utilities", "development"]

authors = [
  {name = "Mustafa Quraish", email = "mustafaquraish@gmail.com" }
]
maintainers = [
  {name = "Mustafa Quraish", email = "mustafaquraish@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.optional-dependencies]
dev = ["check-manifest", "pytest", "twine"]
test = ["coverage", "pytest"]

[project.urls]
"Homepage" = "https://github.com/mustafaquraish/bisector"
"Bug Reports" = "https://github.com/mustafaquraish/bisector/issues"
"Source" = "https://github.com/mustafaquraish/bisector/"

[project.scripts]
bisector = "bisector.__main__:main"
